# auto_backup

./: .gitignore  Cargo.toml  README.md
data/lang/: en.lang  zh-cn.lang
src/: backup.rs  data.rs  entity.rs  il8n.rs  job.rs  lib.rs  log.rs  main.rs  setting.rs  statis.rs  style.rs  util.rs  view.rs  windows.rs
