[package]
name = "auto_backup"
version = "0.1.0"
license = "MIT OR Apache-2.0"
edition = "2021"
build="build.rs"

[build-dependencies]
embed-resource = "2.4.2"

[dependencies]
eframe = { version = "0.27.2", features = []}
egui_extras = { version = "0.27.2", features = ["all_loaders"] }

# For image support:
# egui_extras = { workspace = true, features = ["default", "image"] }

env_logger = { version = "0.10", default-features = false, features = [
    "auto-color",
    "humantime",
] }
image = "0.25.1"
open = "5.1.3"
rfd = "0.14.1"
#timer = "0.2.0"
serde_json = "1.0.115"
serde = { version = "1.0.197", features = ["derive"] }
chrono = "0.4.38"
uuid = { version = "1.8.0", features = ["v4", "fast-rng"] }
cron = "0.12.1"
fs-more = "0.4.0"
egui-notify = "0.14.0"
# zip = "1.3.1"
#cron-job = "0.1.4"
